--- a/apps/static/apps/css/main.css
+++ b/apps/static/apps/css/main.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,500;0,600;0,700;1,500;1,600;1,700&amp;family=Open+Sans:ital@0;1&amp;display=swap");
 
 /*
-Template Name: Cortaly - URL Shortner HTML Template
-Template URI: http://pixner.net/cortaly/
+Template Name: BitUI - URL Shortner HTML Template
+Template URI: http://pixner.net/BitUI/
 Author: uiaxis
 Author URI: https://themeforest.net/user/uiaxis
 Version: 1.0.0
@@ -1843,6 +1843,10 @@ input[type="submit"] {
 
 .header-section .header-wrapper .logo a img {
     width: 100%;
+}
+
+.user-links {
+
 }
 
 @media (min-width: 992px) {
