--- a/templates/apps/sign-in.html
+++ b/templates/apps/sign-in.html
@@ -3,13 +3,12 @@
 <html lang="en">
 
 
-<!-- Mirrored from pixner.net/cortaly/main/sign-in.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 24 Dec 2022 22:22:39 GMT -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Cortaly - URL Shortner HTML Template</title>
+    <title>BitUI - URL Shortner</title>
 
     <link rel="stylesheet" href="{% static 'apps/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'apps/css/all.min.css' %}">
@@ -41,14 +40,14 @@
     <div class="account-section bg_img" data-background="{% static 'apps/images/account-bg.jpg' %}">
         <div class="container">
             <div class="account-title text-center">
-                <a href="index.html" class="back-home"><i class="fas fa-angle-left"></i><span>Back <span class="d-none d-sm-inline-block">To Cortaly</span></span></a>
-                <a href="index.html" class="logo">
+                <a href="{% url 'bitly' %}" class="back-home"><i class="fas fa-angle-left"></i><span>Back <span class="d-none d-sm-inline-block">To BitUI</span></span></a>
+                <a href="{% url 'bitly' %}" class="logo">
                     <img src="{% static 'apps/images/logo/logo.png' %}" alt="logo">
                 </a>
             </div>
             <div class="account-wrapper" style="max-width: 500px">
                 <div class="account-body">
-                    <h4 class="title mb-20">Welcome To Cortaly</h4>
+                    <h4 class="title mb-20">Welcome To BitUI</h4>
                     <form action="{% url 'sign-in' %}" method="post" class="account-form">
                         {% csrf_token %}
                         {{ form.errors }}
@@ -91,5 +90,4 @@
 </body>
 
 
-<!-- Mirrored from pixner.net/cortaly/main/sign-in.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 24 Dec 2022 22:22:43 GMT -->
 </html>
